chore: brand update to MeaCore Launcher Alfa 1.1.0 and installer automation